fix image on iphone

--- a/css/style.css
+++ b/css/style.css
@@ -4720,6 +4720,12 @@ img.lazy-image.loaded {
   transform: scaleX(1);
 }
 
+.social-img img{
+  border-radius: 7px;
+  margin-bottom: 30px;
+  height: fit-content;
+}
+
 .mixitup-gallery .gallery-item-two {
   display: none;
 }
@@ -4749,7 +4755,7 @@ img.lazy-image.loaded {
 .gallery-item .inner-box .image img {
   display: block;
   /* width: 100%; */
-  height: 100%;
+  height: auto;
   /* -webkit-filter: grayscale(100%);
   -ms-filter: grayscale(100%);
   -moz-filter: grayscale(100%);
